fixed overflow issue

--- a/index.css
+++ b/index.css
@@ -4,13 +4,13 @@ html {
 html,body{
 	margin:0; padding:0;
 	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-	overflow-y: hidden;
+	/* overflow-x: hidden; */
 }
 header {
 	margin-top: 0;
 	height: 100vh;
 	width: 100vw;
-	background: url('./images/peter-mason-docks blue.png') no-repeat center center fixed; 
+	background: url('./images/peter-mason-docks blue.jpg') no-repeat center center fixed; 
 	background-attachment: initial;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
